--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,10 @@
 
     <link href="css/app.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-
-    <script src="jspm_packages/system.js"></script>
-    <script src="config.js"></script>
-    <script>
-        System.import('./app/app.module');
-    </script>
+    <script src="app/app.bundle.module.js"></script>
 
 </head>
-<body>
-    <div id="splash">
-        <i class="fa fa-spinner fa-spin"></i>
-    </div>
+<body ng-app="app">
     <ui-view></ui-view>
 </body>
 </html>
