--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 
     <link href="css/app.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <script src="app/app.bundle.module.js"></script>
+
+    INSERTTEXTHERE
 
 </head>
 <body ng-app="app">
